kubernetes/node-grpc-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: infranauts-meetup
  name: node-grpc-server
  labels:
    app: node-grpc-server
spec:
  selector:
    matchLabels:
      app: node-grpc-server
  template:
    metadata:
      labels:
        app: node-grpc-server
        name: node-grpc-server
    spec:
      containers:
        - name: node-grpc-server
          image: mahendrabagul/node-grpc-server
          command:
            - node
          args:
            - --max-old-space-size=2048
            - server.js
#          resources:
#            requests:
#              memory: "2Gi"
#              cpu: "1000m"
#            limits:
#              memory: "4Gi"
#              cpu: "2000m"
          ports:
            - containerPort: 50051
              name: grpc
          readinessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 5
            periodSeconds: 15
          livenessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 15
            periodSeconds: 30
          volumeMounts:
            - name: grpc-server-certificates
              mountPath: app/Certs/
              readOnly: true
      volumes:
        - name: grpc-server-certificates
          secret:
            secretName: grpc-server-certificates
---
apiVersion: v1
kind: Service
metadata:
  namespace: infranauts-meetup
  labels:
    app: node-grpc-server
  name: node-grpc-server
spec:
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc
      nodePort: 30110
      protocol: TCP
  selector:
    app: node-grpc-server
  type: NodePort
