kubernetes/node-grpc-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: infranauts-meetup
  labels:
    app: node-grpc-server
  name: node-grpc-server
spec:
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc
      nodePort: 30110
      protocol: TCP
  selector:
    app: node-grpc-server
  type: NodePort
